tags/Cosmos-1.3.1716.preWN/SOURCES/ModelGenerator/LhaParser/Lha-parser.output
Terminaux inutilisés dans la grammaire

   LhaName


Grammaire

    0 $accept: LHA "end of file"

    1 LHA: declarations InitFinal definitions

    2 declarations: Sizes Constants Lists HaslExps
    3             | Sizes Lists HaslExps

    4 IntMarkingFormula: ival
    5                  | str
    6                  | LB IntMarkingFormula RB
    7                  | MINUS IntMarkingFormula
    8                  | IntMarkingFormula PLUS IntMarkingFormula
    9                  | IntMarkingFormula MINUS IntMarkingFormula
   10                  | IntMarkingFormula MUL IntMarkingFormula
   11                  | IntMarkingFormula POWER IntMarkingFormula
   12                  | FLOOR LB IntMarkingFormula RB
   13                  | FLOOR LB IntMarkingFormula DIV IntMarkingFormula RB
   14                  | MIN LB IntMarkingFormula COMMA IntMarkingFormula RB
   15                  | MAX LB IntMarkingFormula COMMA IntMarkingFormula RB

   16 RealMarkingFormula: rval
   17                   | ival
   18                   | str
   19                   | LB RealMarkingFormula RB
   20                   | MINUS RealMarkingFormula
   21                   | RealMarkingFormula DIV RealMarkingFormula
   22                   | RealMarkingFormula PLUS RealMarkingFormula
   23                   | RealMarkingFormula MINUS RealMarkingFormula
   24                   | RealMarkingFormula MUL RealMarkingFormula
   25                   | RealMarkingFormula POWER RealMarkingFormula
   26                   | FLOOR LB RealMarkingFormula RB
   27                   | MIN LB RealMarkingFormula COMMA RealMarkingFormula RB
   28                   | MAX LB RealMarkingFormula COMMA RealMarkingFormula RB

   29 RealVarMarkingFormula: rval
   30                      | ival
   31                      | str
   32                      | LB RealVarMarkingFormula RB
   33                      | MINUS RealVarMarkingFormula
   34                      | RealVarMarkingFormula DIV RealVarMarkingFormula
   35                      | RealVarMarkingFormula PLUS RealVarMarkingFormula
   36                      | RealVarMarkingFormula MINUS RealVarMarkingFormula
   37                      | RealVarMarkingFormula MUL RealVarMarkingFormula
   38                      | RealVarMarkingFormula POWER RealVarMarkingFormula
   39                      | FLOOR LB RealVarMarkingFormula RB
   40                      | MIN LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB
   41                      | MAX LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB

   42 Sizes: NbLocations NbVariables
   43      | NbVariables NbLocations

   44 Constants: Constant
   45          | Constant Constants

   46 Constant: Const INT str EQ IntMarkingFormula SEMICOLON
   47         | Const DOUBLE str EQ RealMarkingFormula SEMICOLON

   48 NbVariables: NbVar EQ ival SEMICOLON

   49 NbLocations: NbLoc EQ ival SEMICOLON

   50 Lists: VariablesList LocationsList
   51      | LocationsList VariablesList

   52 VariablesList: VList EQ '{' VLabels '}' SEMICOLON

   53 VLabels: str
   54        | VLabels COMMA str

   55 LocationsList: LList EQ '{' LLabels '}' SEMICOLON

   56 LLabels: str
   57        | LLabels COMMA str

   58 InitFinal: init final
   59          | final init

   60 init: Iloc EQ '{' iLLabels '}' SEMICOLON

   61 iLLabels: str
   62         | iLLabels COMMA str

   63 final: Floc EQ '{' fLLabels '}' SEMICOLON

   64 fLLabels: str
   65         | fLLabels COMMA str

   66 definitions: LocationsDef EdgesDef
   67            | EdgesDef LocationsDef

   68 LocationsDef: locations EQ '{' LOCATIONS '}' SEMICOLON

   69 LOCATIONS: LOCATION
   70          | LOCATIONS LOCATION

   71 LOCATION: LB str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   72         | LB str COMMA LogExpr RB SEMICOLON

   73 FLOWS: FLOW
   74      | FLOWS COMMA FLOW

   75 FLOW: str COLON RealMarkingFormula

   76 LogExpr: TRUE
   77        | FALSE
   78        | CompExpr
   79        | LogExpr AND LogExpr
   80        | LogExpr OR LogExpr
   81        | LB LogExpr RB
   82        | NOT LogExpr

   83 CompExpr: RealMarkingFormula EQ RealMarkingFormula
   84         | RealMarkingFormula LEQ RealMarkingFormula
   85         | RealMarkingFormula GEQ RealMarkingFormula
   86         | RealMarkingFormula LL RealMarkingFormula
   87         | RealMarkingFormula GG RealMarkingFormula

   88 EdgesDef: edges EQ '{' EDGES '}' SEMICOLON

   89 EDGES: EDGE
   90      | EDGE EDGES

   91 EDGE: LB LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

   92 ACTIONS: SHARP
   93        | ALL
   94        | ALL BackSlash SetOfActions
   95        | SetOfActions

   96 SetOfActions: '{' Actions '}'

   97 Actions: str
   98        | Actions COMMA str

   99 CONSTRAINTS: CONSTRAINT
  100            | CONSTRAINT AND CONSTRAINTS
  101            | SHARP

  102 CONSTRAINT: LinearExp EQ RealMarkingFormula
  103           | LinearExp LEQ RealMarkingFormula
  104           | LinearExp GEQ RealMarkingFormula

  105 LinearExp: term
  106          | LinearExp MINUS term
  107          | LinearExp PLUS term

  108 term: str
  109     | LB RealMarkingFormula RB MUL str
  110     | ival MUL str
  111     | rval MUL str
  112     | str MUL str
  113     | MINUS str
  114     | MINUS LB RealMarkingFormula RB MUL str
  115     | MINUS ival MUL str
  116     | MINUS rval MUL str
  117     | MINUS str MUL str

  118 UPDATES: '{' Updates '}'
  119        | SHARP

  120 Updates: Update
  121        | Updates COMMA Update

  122 Update: str EQ RealVarMarkingFormula

  123 HaslExps: HaslExp
  124         | HaslExp HaslExps

  125 HaslExp: str EQ TopHaslExp SEMICOLON
  126        | TopHaslExp SEMICOLON

  127 rorival: rval
  128        | ival
  129        | str

  130 TopHaslExp: AVG LB AlgExpr RB
  131           | PROB
  132           | PDF LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB
  133           | CDF LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB
  134           | LB TopHaslExp RB
  135           | TopHaslExp PLUS TopHaslExp
  136           | TopHaslExp MUL TopHaslExp
  137           | TopHaslExp DIV TopHaslExp
  138           | ival
  139           | rval

  140 AlgExpr: LhaFunc
  141        | MIN LB AlgExpr COMMA AlgExpr RB
  142        | MAX LB AlgExpr COMMA AlgExpr RB
  143        | MINUS AlgExpr
  144        | FLOOR LB AlgExpr RB
  145        | LB AlgExpr RB
  146        | AlgExpr POWER AlgExpr
  147        | AlgExpr PLUS AlgExpr
  148        | AlgExpr MINUS AlgExpr
  149        | AlgExpr MUL AlgExpr
  150        | AlgExpr DIV AlgExpr

  151 LhaFunc: LAST LB LinForm RB
  152        | LhaMIN LB LinForm RB
  153        | LhaMAX LB LinForm RB
  154        | INTEGRAL LB LinForm RB

  155 LinForm: VarTerm
  156        | LinForm MINUS VarTerm
  157        | LinForm PLUS VarTerm

  158 VarTerm: str
  159        | LB RealMarkingFormula RB MUL str
  160        | ival MUL str
  161        | rval MUL str
  162        | str MUL str
  163        | MINUS str
  164        | MINUS LB RealMarkingFormula RB MUL str
  165        | MINUS ival MUL str
  166        | MINUS rval MUL str
  167        | MINUS str MUL str


Terminaux, suivis des règles où ils apparaissent

"end of file" (0) 0
'{' (123) 52 55 60 63 68 88 96 118
'}' (125) 52 55 60 63 68 88 96 118
error (256)
str (258) 5 18 31 46 47 53 54 56 57 61 62 64 65 71 72 75 91 97 98 108
    109 110 111 112 113 114 115 116 117 122 125 129 158 159 160 161
    162 163 164 165 166 167
rval (259) 16 29 111 116 127 139 161 166
ival (260) 4 17 30 48 49 110 115 128 138 160 165
SEMICOLON (261) 46 47 48 49 52 55 60 63 68 71 72 88 91 125 126
COLON (262) 75
COMMA (263) 14 15 27 28 40 41 54 57 62 65 71 72 74 91 98 121 132 133
    141 142
LB (264) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    130 132 133 134 141 142 144 145 151 152 153 154 159 164
RB (265) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    130 132 133 134 141 142 144 145 151 152 153 154 159 164
SHARP (266) 92 101 119
ALL (267) 93 94
BackSlash (268) 94
EQ (269) 46 47 48 49 52 55 60 63 68 83 88 102 122 125
GEQ (270) 85 104
LEQ (271) 84 103
LL (272) 86
GG (273) 87
AND (274) 79 100
OR (275) 80
NOT (276) 82
TRUE (277) 76
FALSE (278) 77
DOUBLE (279) 47
INT (280) 46
DIV (281) 13 21 34 137 150
MUL (282) 10 24 37 109 110 111 112 114 115 116 117 136 149 159 160
    161 162 164 165 166 167
PLUS (283) 8 22 35 107 135 147 157
MINUS (284) 7 9 20 23 33 36 106 113 114 115 116 117 143 148 156 163
    164 165 166 167
POWER (285) 11 25 38 146
FLOOR (286) 12 13 26 39 144
MIN (287) 14 27 40 141
MAX (288) 15 28 41 142
LhaMIN (289) 152
LhaMAX (290) 153
AVG (291) 130
PROB (292) 131
LAST (293) 151
INTEGRAL (294) 154
LhaName (295)
Const (296) 46 47
NbLoc (297) 49
NbVar (298) 48
VList (299) 52
LList (300) 55
Iloc (301) 60
Floc (302) 63
locations (303) 68
edges (304) 88
PDF (305) 132
CDF (306) 133
NEG (307)


Non-terminaux, suivis des règles où ils apparaissent

$accept (55)
    à gauche: 0
LHA (56)
    à gauche: 1, à droite: 0
declarations (57)
    à gauche: 2 3, à droite: 1
IntMarkingFormula (58)
    à gauche: 4 5 6 7 8 9 10 11 12 13 14 15, à droite: 6 7 8 9 10
    11 12 13 14 15 46
RealMarkingFormula (59)
    à gauche: 16 17 18 19 20 21 22 23 24 25 26 27 28, à droite: 19
    20 21 22 23 24 25 26 27 28 47 75 83 84 85 86 87 102 103 104 109
    114 159 164
RealVarMarkingFormula (60)
    à gauche: 29 30 31 32 33 34 35 36 37 38 39 40 41, à droite: 32
    33 34 35 36 37 38 39 40 41 122
Sizes (61)
    à gauche: 42 43, à droite: 2 3
Constants (62)
    à gauche: 44 45, à droite: 2 45
Constant (63)
    à gauche: 46 47, à droite: 44 45
NbVariables (64)
    à gauche: 48, à droite: 42 43
NbLocations (65)
    à gauche: 49, à droite: 42 43
Lists (66)
    à gauche: 50 51, à droite: 2 3
VariablesList (67)
    à gauche: 52, à droite: 50 51
VLabels (68)
    à gauche: 53 54, à droite: 52 54
LocationsList (69)
    à gauche: 55, à droite: 50 51
LLabels (70)
    à gauche: 56 57, à droite: 55 57
InitFinal (71)
    à gauche: 58 59, à droite: 1
init (72)
    à gauche: 60, à droite: 58 59
iLLabels (73)
    à gauche: 61 62, à droite: 60 62
final (74)
    à gauche: 63, à droite: 58 59
fLLabels (75)
    à gauche: 64 65, à droite: 63 65
definitions (76)
    à gauche: 66 67, à droite: 1
LocationsDef (77)
    à gauche: 68, à droite: 66 67
LOCATIONS (78)
    à gauche: 69 70, à droite: 68 70
LOCATION (79)
    à gauche: 71 72, à droite: 69 70
FLOWS (80)
    à gauche: 73 74, à droite: 71 74
FLOW (81)
    à gauche: 75, à droite: 73 74
LogExpr (82)
    à gauche: 76 77 78 79 80 81 82, à droite: 71 72 79 80 81 82
CompExpr (83)
    à gauche: 83 84 85 86 87, à droite: 78
EdgesDef (84)
    à gauche: 88, à droite: 66 67
EDGES (85)
    à gauche: 89 90, à droite: 88 90
EDGE (86)
    à gauche: 91, à droite: 89 90
ACTIONS (87)
    à gauche: 92 93 94 95, à droite: 91
SetOfActions (88)
    à gauche: 96, à droite: 94 95
Actions (89)
    à gauche: 97 98, à droite: 96 98
CONSTRAINTS (90)
    à gauche: 99 100 101, à droite: 91 100
CONSTRAINT (91)
    à gauche: 102 103 104, à droite: 99 100
LinearExp (92)
    à gauche: 105 106 107, à droite: 102 103 104 106 107
term (93)
    à gauche: 108 109 110 111 112 113 114 115 116 117, à droite:
    105 106 107
UPDATES (94)
    à gauche: 118 119, à droite: 91
Updates (95)
    à gauche: 120 121, à droite: 118 121
Update (96)
    à gauche: 122, à droite: 120 121
HaslExps (97)
    à gauche: 123 124, à droite: 2 3 124
HaslExp (98)
    à gauche: 125 126, à droite: 123 124
rorival (99)
    à gauche: 127 128 129, à droite: 132 133
TopHaslExp (100)
    à gauche: 130 131 132 133 134 135 136 137 138 139, à droite:
    125 126 134 135 136 137
AlgExpr (101)
    à gauche: 140 141 142 143 144 145 146 147 148 149 150, à droite:
    130 132 133 141 142 143 144 145 146 147 148 149 150
LhaFunc (102)
    à gauche: 151 152 153 154, à droite: 140
LinForm (103)
    à gauche: 155 156 157, à droite: 151 152 153 154 156 157
VarTerm (104)
    à gauche: 158 159 160 161 162 163 164 165 166 167, à droite:
    155 156 157


État 0

    0 $accept: . LHA "end of file"

    NbLoc  décalage et aller à l'état 1
    NbVar  décalage et aller à l'état 2

    LHA           aller à l'état 3
    declarations  aller à l'état 4
    Sizes         aller à l'état 5
    NbVariables   aller à l'état 6
    NbLocations   aller à l'état 7


État 1

   49 NbLocations: NbLoc . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 8


État 2

   48 NbVariables: NbVar . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 9


État 3

    0 $accept: LHA . "end of file"

    "end of file"  décalage et aller à l'état 10


État 4

    1 LHA: declarations . InitFinal definitions

    Iloc  décalage et aller à l'état 11
    Floc  décalage et aller à l'état 12

    InitFinal  aller à l'état 13
    init       aller à l'état 14
    final      aller à l'état 15


État 5

    2 declarations: Sizes . Constants Lists HaslExps
    3             | Sizes . Lists HaslExps

    Const  décalage et aller à l'état 16
    VList  décalage et aller à l'état 17
    LList  décalage et aller à l'état 18

    Constants      aller à l'état 19
    Constant       aller à l'état 20
    Lists          aller à l'état 21
    VariablesList  aller à l'état 22
    LocationsList  aller à l'état 23


État 6

   43 Sizes: NbVariables . NbLocations

    NbLoc  décalage et aller à l'état 1

    NbLocations  aller à l'état 24


État 7

   42 Sizes: NbLocations . NbVariables

    NbVar  décalage et aller à l'état 2

    NbVariables  aller à l'état 25


État 8

   49 NbLocations: NbLoc EQ . ival SEMICOLON

    ival  décalage et aller à l'état 26


État 9

   48 NbVariables: NbVar EQ . ival SEMICOLON

    ival  décalage et aller à l'état 27


État 10

    0 $accept: LHA "end of file" .

    $défaut  accepter


État 11

   60 init: Iloc . EQ '{' iLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 28


État 12

   63 final: Floc . EQ '{' fLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 29


État 13

    1 LHA: declarations InitFinal . definitions

    locations  décalage et aller à l'état 30
    edges      décalage et aller à l'état 31

    definitions   aller à l'état 32
    LocationsDef  aller à l'état 33
    EdgesDef      aller à l'état 34


État 14

   58 InitFinal: init . final

    Floc  décalage et aller à l'état 12

    final  aller à l'état 35


État 15

   59 InitFinal: final . init

    Iloc  décalage et aller à l'état 11

    init  aller à l'état 36


État 16

   46 Constant: Const . INT str EQ IntMarkingFormula SEMICOLON
   47         | Const . DOUBLE str EQ RealMarkingFormula SEMICOLON

    DOUBLE  décalage et aller à l'état 37
    INT     décalage et aller à l'état 38


État 17

   52 VariablesList: VList . EQ '{' VLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 39


État 18

   55 LocationsList: LList . EQ '{' LLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 40


État 19

    2 declarations: Sizes Constants . Lists HaslExps

    VList  décalage et aller à l'état 17
    LList  décalage et aller à l'état 18

    Lists          aller à l'état 41
    VariablesList  aller à l'état 22
    LocationsList  aller à l'état 23


État 20

   44 Constants: Constant .
   45          | Constant . Constants

    Const  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 44 (Constants)

    Constants  aller à l'état 42
    Constant   aller à l'état 20


État 21

    3 declarations: Sizes Lists . HaslExps

    str   décalage et aller à l'état 43
    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    HaslExps    aller à l'état 51
    HaslExp     aller à l'état 52
    TopHaslExp  aller à l'état 53


État 22

   50 Lists: VariablesList . LocationsList

    LList  décalage et aller à l'état 18

    LocationsList  aller à l'état 54


État 23

   51 Lists: LocationsList . VariablesList

    VList  décalage et aller à l'état 17

    VariablesList  aller à l'état 55


État 24

   43 Sizes: NbVariables NbLocations .

    $défaut  réduction par utilisation de la règle 43 (Sizes)


État 25

   42 Sizes: NbLocations NbVariables .

    $défaut  réduction par utilisation de la règle 42 (Sizes)


État 26

   49 NbLocations: NbLoc EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 56


État 27

   48 NbVariables: NbVar EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 57


État 28

   60 init: Iloc EQ . '{' iLLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 58


État 29

   63 final: Floc EQ . '{' fLLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 59


État 30

   68 LocationsDef: locations . EQ '{' LOCATIONS '}' SEMICOLON

    EQ  décalage et aller à l'état 60


État 31

   88 EdgesDef: edges . EQ '{' EDGES '}' SEMICOLON

    EQ  décalage et aller à l'état 61


État 32

    1 LHA: declarations InitFinal definitions .

    $défaut  réduction par utilisation de la règle 1 (LHA)


État 33

   66 definitions: LocationsDef . EdgesDef

    edges  décalage et aller à l'état 31

    EdgesDef  aller à l'état 62


État 34

   67 definitions: EdgesDef . LocationsDef

    locations  décalage et aller à l'état 30

    LocationsDef  aller à l'état 63


État 35

   58 InitFinal: init final .

    $défaut  réduction par utilisation de la règle 58 (InitFinal)


État 36

   59 InitFinal: final init .

    $défaut  réduction par utilisation de la règle 59 (InitFinal)


État 37

   47 Constant: Const DOUBLE . str EQ RealMarkingFormula SEMICOLON

    str  décalage et aller à l'état 64


État 38

   46 Constant: Const INT . str EQ IntMarkingFormula SEMICOLON

    str  décalage et aller à l'état 65


État 39

   52 VariablesList: VList EQ . '{' VLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 66


État 40

   55 LocationsList: LList EQ . '{' LLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 67


État 41

    2 declarations: Sizes Constants Lists . HaslExps

    str   décalage et aller à l'état 43
    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    HaslExps    aller à l'état 68
    HaslExp     aller à l'état 52
    TopHaslExp  aller à l'état 53


État 42

   45 Constants: Constant Constants .

    $défaut  réduction par utilisation de la règle 45 (Constants)


État 43

  125 HaslExp: str . EQ TopHaslExp SEMICOLON

    EQ  décalage et aller à l'état 69


État 44

  139 TopHaslExp: rval .

    $défaut  réduction par utilisation de la règle 139 (TopHaslExp)


État 45

  138 TopHaslExp: ival .

    $défaut  réduction par utilisation de la règle 138 (TopHaslExp)


État 46

  134 TopHaslExp: LB . TopHaslExp RB

    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    TopHaslExp  aller à l'état 70


État 47

  130 TopHaslExp: AVG . LB AlgExpr RB

    LB  décalage et aller à l'état 71


État 48

  131 TopHaslExp: PROB .

    $défaut  réduction par utilisation de la règle 131 (TopHaslExp)


État 49

  132 TopHaslExp: PDF . LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB  décalage et aller à l'état 72


État 50

  133 TopHaslExp: CDF . LB AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB  décalage et aller à l'état 73


État 51

    3 declarations: Sizes Lists HaslExps .

    $défaut  réduction par utilisation de la règle 3 (declarations)


État 52

  123 HaslExps: HaslExp .
  124         | HaslExp . HaslExps

    str   décalage et aller à l'état 43
    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 123 (HaslExps)

    HaslExps    aller à l'état 74
    HaslExp     aller à l'état 52
    TopHaslExp  aller à l'état 53


État 53

  126 HaslExp: TopHaslExp . SEMICOLON
  135 TopHaslExp: TopHaslExp . PLUS TopHaslExp
  136           | TopHaslExp . MUL TopHaslExp
  137           | TopHaslExp . DIV TopHaslExp

    SEMICOLON  décalage et aller à l'état 75
    DIV        décalage et aller à l'état 76
    MUL        décalage et aller à l'état 77
    PLUS       décalage et aller à l'état 78


État 54

   50 Lists: VariablesList LocationsList .

    $défaut  réduction par utilisation de la règle 50 (Lists)


État 55

   51 Lists: LocationsList VariablesList .

    $défaut  réduction par utilisation de la règle 51 (Lists)


État 56

   49 NbLocations: NbLoc EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 49 (NbLocations)


État 57

   48 NbVariables: NbVar EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 48 (NbVariables)


État 58

   60 init: Iloc EQ '{' . iLLabels '}' SEMICOLON

    str  décalage et aller à l'état 79

    iLLabels  aller à l'état 80


État 59

   63 final: Floc EQ '{' . fLLabels '}' SEMICOLON

    str  décalage et aller à l'état 81

    fLLabels  aller à l'état 82


État 60

   68 LocationsDef: locations EQ . '{' LOCATIONS '}' SEMICOLON

    '{'  décalage et aller à l'état 83


État 61

   88 EdgesDef: edges EQ . '{' EDGES '}' SEMICOLON

    '{'  décalage et aller à l'état 84


État 62

   66 definitions: LocationsDef EdgesDef .

    $défaut  réduction par utilisation de la règle 66 (definitions)


État 63

   67 definitions: EdgesDef LocationsDef .

    $défaut  réduction par utilisation de la règle 67 (definitions)


État 64

   47 Constant: Const DOUBLE str . EQ RealMarkingFormula SEMICOLON

    EQ  décalage et aller à l'état 85


État 65

   46 Constant: Const INT str . EQ IntMarkingFormula SEMICOLON

    EQ  décalage et aller à l'état 86


État 66

   52 VariablesList: VList EQ '{' . VLabels '}' SEMICOLON

    str  décalage et aller à l'état 87

    VLabels  aller à l'état 88


État 67

   55 LocationsList: LList EQ '{' . LLabels '}' SEMICOLON

    str  décalage et aller à l'état 89

    LLabels  aller à l'état 90


État 68

    2 declarations: Sizes Constants Lists HaslExps .

    $défaut  réduction par utilisation de la règle 2 (declarations)


État 69

  125 HaslExp: str EQ . TopHaslExp SEMICOLON

    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    TopHaslExp  aller à l'état 91


État 70

  134 TopHaslExp: LB TopHaslExp . RB
  135           | TopHaslExp . PLUS TopHaslExp
  136           | TopHaslExp . MUL TopHaslExp
  137           | TopHaslExp . DIV TopHaslExp

    RB    décalage et aller à l'état 92
    DIV   décalage et aller à l'état 76
    MUL   décalage et aller à l'état 77
    PLUS  décalage et aller à l'état 78


État 71

  130 TopHaslExp: AVG LB . AlgExpr RB

    LB        décalage et aller à l'état 93
    MINUS     décalage et aller à l'état 94
    FLOOR     décalage et aller à l'état 95
    MIN       décalage et aller à l'état 96
    MAX       décalage et aller à l'état 97
    LhaMIN    décalage et aller à l'état 98
    LhaMAX    décalage et aller à l'état 99
    LAST      décalage et aller à l'état 100
    INTEGRAL  décalage et aller à l'état 101

    AlgExpr  aller à l'état 102
    LhaFunc  aller à l'état 103


État 72

  132 TopHaslExp: PDF LB . AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB        décalage et aller à l'état 93
    MINUS     décalage et aller à l'état 94
    FLOOR     décalage et aller à l'état 95
    MIN       décalage et aller à l'état 96
    MAX       décalage et aller à l'état 97
    LhaMIN    décalage et aller à l'état 98
    LhaMAX    décalage et aller à l'état 99
    LAST      décalage et aller à l'état 100
    INTEGRAL  décalage et aller à l'état 101

    AlgExpr  aller à l'état 104
    LhaFunc  aller à l'état 103


État 73

  133 TopHaslExp: CDF LB . AlgExpr COMMA rorival COMMA rorival COMMA rorival RB

    LB        décalage et aller à l'état 93
    MINUS     décalage et aller à l'état 94
    FLOOR     décalage et aller à l'état 95
    MIN       décalage et aller à l'état 96
    MAX       décalage et aller à l'état 97
    LhaMIN    décalage et aller à l'état 98
    LhaMAX    décalage et aller à l'état 99
    LAST      décalage et aller à l'état 100
    INTEGRAL  décalage et aller à l'état 101

    AlgExpr  aller à l'état 105
    LhaFunc  aller à l'état 103


État 74

  124 HaslExps: HaslExp HaslExps .

    $défaut  réduction par utilisation de la règle 124 (HaslExps)


État 75

  126 HaslExp: TopHaslExp SEMICOLON .

    $défaut  réduction par utilisation de la règle 126 (HaslExp)


État 76

  137 TopHaslExp: TopHaslExp DIV . TopHaslExp

    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    TopHaslExp  aller à l'état 106


État 77

  136 TopHaslExp: TopHaslExp MUL . TopHaslExp

    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    TopHaslExp  aller à l'état 107


État 78

  135 TopHaslExp: TopHaslExp PLUS . TopHaslExp

    rval  décalage et aller à l'état 44
    ival  décalage et aller à l'état 45
    LB    décalage et aller à l'état 46
    AVG   décalage et aller à l'état 47
    PROB  décalage et aller à l'état 48
    PDF   décalage et aller à l'état 49
    CDF   décalage et aller à l'état 50

    TopHaslExp  aller à l'état 108


État 79

   61 iLLabels: str .

    $défaut  réduction par utilisation de la règle 61 (iLLabels)


État 80

   60 init: Iloc EQ '{' iLLabels . '}' SEMICOLON
   62 iLLabels: iLLabels . COMMA str

    COMMA  décalage et aller à l'état 109
    '}'    décalage et aller à l'état 110


État 81

   64 fLLabels: str .

    $défaut  réduction par utilisation de la règle 64 (fLLabels)


État 82

   63 final: Floc EQ '{' fLLabels . '}' SEMICOLON
   65 fLLabels: fLLabels . COMMA str

    COMMA  décalage et aller à l'état 111
    '}'    décalage et aller à l'état 112


État 83

   68 LocationsDef: locations EQ '{' . LOCATIONS '}' SEMICOLON

    LB  décalage et aller à l'état 113

    LOCATIONS  aller à l'état 114
    LOCATION   aller à l'état 115


État 84

   88 EdgesDef: edges EQ '{' . EDGES '}' SEMICOLON

    LB  décalage et aller à l'état 116

    EDGES  aller à l'état 117
    EDGE   aller à l'état 118


État 85

   47 Constant: Const DOUBLE str EQ . RealMarkingFormula SEMICOLON

    str    décalage et aller à l'état 119
    rval   décalage et aller à l'état 120
    ival   décalage et aller à l'état 121
    LB     décalage et aller à l'état 122
    MINUS  décalage et aller à l'état 123
    FLOOR  décalage et aller à l'état 124
    MIN    décalage et aller à l'état 125
    MAX    décalage et aller à l'état 126

    RealMarkingFormula  aller à l'état 127


État 86

   46 Constant: Const INT str EQ . IntMarkingFormula SEMICOLON

    str    décalage et aller à l'état 128
    ival   décalage et aller à l'état 129
    LB     décalage et aller à l'état 130
    MINUS  décalage et aller à l'état 131
    FLOOR  décalage et aller à l'état 132
    MIN    décalage et aller à l'état 133
    MAX    décalage et aller à l'état 134

    IntMarkingFormula  aller à l'état 135


État 87

   53 VLabels: str .

    $défaut  réduction par utilisation de la règle 53 (VLabels)


État 88

   52 VariablesList: VList EQ '{' VLabels . '}' SEMICOLON
   54 VLabels: VLabels . COMMA str

    COMMA  décalage et aller à l'état 136
    '}'    décalage et aller à l'état 137


État 89

   56 LLabels: str .

    $défaut  réduction par utilisation de la règle 56 (LLabels)


État 90

   55 LocationsList: LList EQ '{' LLabels . '}' SEMICOLON
   57 LLabels: LLabels . COMMA str

    COMMA  décalage et aller à l'état 138
    '}'    décalage et aller à l'état 139


État 91

  125 HaslExp: str EQ TopHaslExp . SEMICOLON
  135 TopHaslExp: TopHaslExp . PLUS TopHaslExp
  136           | TopHaslExp . MUL TopHaslExp
  137           | TopHaslExp . DIV TopHaslExp

    SEMICOLON  décalage et aller à l'état 140
    DIV        décalage et aller à l'état 76
    MUL        décalage et aller à l'état 77
    PLUS       décalage et aller à l'état 78


État 92

  134 TopHaslExp: LB TopHaslExp RB .

    $défaut  réduction par utilisation de la règle 134 (TopHaslExp)


État 93

  145 AlgExpr: LB . AlgExpr RB

    LB        décalage et aller à l'état 93
    MINUS     décalage et aller à l'état 94
    FLOOR     décalage et aller à l'état 95
    MIN       décalage et aller à l'état 96
    MAX       décalage et aller à l'état 97
    LhaMIN    décalage et aller à l'état 98
    LhaMAX    décalage et aller à l'état 99
    LAST      décalage et aller à l'état 100
    INTEGRAL  décalage et aller à l'état 101

    AlgExpr  aller à l'état 141
    LhaFunc  aller à l'état 103


État 94

  143 AlgExpr: MINUS . AlgExpr

    LB        décalage et aller à l'état 93
    MINUS     décalage et aller à l'état 94
    FLOOR     décalage et aller à l'état 95
    MIN       décalage et aller à l'état 96
    MAX       décalage et aller à l'état 97
    LhaMIN    décalage et aller à l'état 98
    LhaMAX    décalage et aller à l'état 99
    LAST      décalage et aller à l'état 100
    INTEGRAL  décalage et aller à l'état 101

    AlgExpr  aller à l'état 142
    LhaFunc  aller à l'état 103


État 95

  144 AlgExpr: FLOOR . LB AlgExpr RB

    LB  décalage et aller à l'état 143


État 96

  141 AlgExpr: MIN . LB AlgExpr COMMA AlgExpr RB
